force-app/main/default/mdapioutput/objects/Application_Window__c.object
<CustomObject>
    <description>Controls whether a theme is accepting applications</description>
    <label>Application Window</label>
    <nameField>
        <label>Application Window Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Windows</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Live__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Live</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Theme__c</fullName>
        <label>Theme</label>
        <referenceTo>Theme__c</referenceTo>
        <relationshipLabel>Application Windows</relationshipLabel>
        <relationshipName>Application_Windows</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Is_Live__c</columns>
        <columns>Theme__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>